2008-09-03  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/audit_help.c: Define new type
	shadow_audit_result for the result argument of audit_logger().
	This permits stronger type checking and a better readability of
	the results (SHADOW_AUDIT_FAILURE/SHADOW_AUDIT_SUCCESS constants).
	* src/groupadd.c, src/groupdel.c, src/useradd.c, src/userdel.c:
	Use the SHADOW_AUDIT_FAILURE/SHADOW_AUDIT_SUCCESS results instead
	of 0 or 1 in audit_logger().

2008-09-03  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c: Log failures to remove the mailbox to syslog and
	audit.
	* src/userdel.c: Log successful removal of home directory to audit
	only in case of success.
	* src/userdel.c: Move the audit log of failure to remove the home
	directory before the call to function that may exit.
	* src/userdel.c: Document that errors is only used to count errors
	during the removal of the home directory.

2008-09-03  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Log errors to syslog in grp_update() since
	changes have started to be reported to syslog.
	* src/userdel.c: Fix some result parameters sent to
	audit_logger().

2008-09-02  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Following changes from a patch contributed by Steve Grubb
	<sgrubb@redhat.com>
	* src/groupadd.c: Log to audit with type AUDIT_ADD_GROUP instead
	of AUDIT_USER_CHAUTHTOK.
	* src/groupdel.c: Log to audit with type AUDIT_DEL_GROUP instead 
	of AUDIT_USER_CHAUTHTOK.
	* src/useradd.c: Log to audit with type AUDIT_ADD_USER /
	AUDIT_ADD_GROUP / AUDIT_USYS_CONFIG instead of
	AUDIT_USER_CHAUTHTOK.
	* src/useradd.c: Add missing logs to audit.
	* src/userdel.c: Log to audit with type AUDIT_DEL_USER /
	AUDIT_DEL_GROUP instead of AUDIT_USER_CHAUTHTOK.
	* src/userdel.c: Add missing logs to audit.

2008-08-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Remove duplicated gr_open().
