@@ -25,6 +25,8 @@ shadow-4.1.2.1 -> shadow-4.1.3						UNRELEASED
   * Use the groupmems PAM service name instead of groupmod.
   * Fix segmentation faults when adding or removing users from a group.
   * Added support for shadow groups.
+  * Added support long options --add (-a), --delete (-d), --purge (-p),
+    --list (-l), --group (-g).
 - newusers
   * Implement the -r, --system option.
 - passwd
